fix(header): search result on small search bar

--- a/packages/webcomponents/header/src/components/search/style.scss
+++ b/packages/webcomponents/header/src/components/search/style.scss
@@ -240,6 +240,9 @@
   @media (width >= map.get($grid-breakpoints, lg)) {
     &-results {
       max-height: calc(100dvh - ($header-height + 2 * 16px));
+      width: 600px;
+      left: 50%;
+      transform: translateX(-50%);
     }
   }
 }
